WIP: API設計
